# robosysasgmt2

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py  test.bash  weather_forecast_node.py
.github/workflows/: config.yml
config/: config.yml
launch/: weather_forecast.launch.py
robosysasgmt2/: weather_forecast.py  weather_forecast_node.py
test/: test.bash
