<?xml version="1.0"?>
<package format="3">
  <name>robosysasgmt2</name>
  <version>0.1.0</version>
  <description>Weather forecast ROS2 package</description>
  <maintainer email="kei1ro@example.com">Keiichiro Kobayashi</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>requests</exec_depend>
  <exec_depend>PyYAML</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

